test(css): prevent horizontal overflow shift on scroll after dropdown selection: add overflow-x and width in 1 CSS file

--- a/css/who-are-you.css
+++ b/css/who-are-you.css
@@ -60,6 +60,8 @@ body {
 
   /* Classic cursor, no frillies (aka no I-beam/insertion point symbol when hovering over nav links)  */
   cursor: default;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 /* 
